--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.6.8'
+    testCompile 'org.robolectric:robolectric:3.0'
 
     // Required for instrumented tests
 
