--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".news.NewsDetail.NewsDetailActivity"
+            android:label="@string/news_detail"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
