--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,10 @@ dependencies {
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    compile "com.android.support:cardview-v7:${supportLibVersion}"
     compile "com.android.support:support-v4:${supportLibVersion}"
     compile "com.android.support:preference-v14:${supportLibVersion}"
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile "com.google.code.gson:gson:2.6.2"
@@ -75,4 +75,15 @@ dependencies {
      */
     compile "com.github.bumptech.glide:glide:${glideVersion}"
     annotationProcessor "com.github.bumptech.glide:compiler:${glideVersion}"
+
+    /**
+     * @see <a href="https://github.com/lapism/SearchView">SearchView</a>
+     */
+    compile 'com.lapism:searchview:5.0.0-alpha4'
+    compile 'com.google.android:flexbox:0.3.0'
+
+    /**
+     * @see <a href="https://github.com/jd-alexander/LikeButton">LikeButton</a>
+     */
+    compile 'com.github.jd-alexander:LikeButton:0.2.2'
 }
