--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:label="@string/news_detail"
             android:theme="@style/AppTheme" />
 
+        <activity android:name=".search.SearchActivity"
+            android:label="@string/search_result"
+            android:theme="@style/AppTheme" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.java.a31"
