--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,21 @@ ext {
     baseRecyclerViewAdapterHelperVersion = '2.9.28'
 }
 
+repositories {
+    jcenter {
+        url "http://jcenter.bintray.com/"
+    }
+}
+
+allprojects {
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven { url "https://dl.bintray.com/thelasterstar/maven/" }
+    }
+}
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -44,6 +59,9 @@ dependencies {
     /**
      * @see <a href="https://developer.android.com/topic/libraries/support-library/index.html">Android support library</a>
      */
+    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+    compile 'com.sina.weibo.sdk:core:4.1.0:openDefaultRelease@aar'
+
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
@@ -57,6 +75,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.6.8'
     testCompile 'org.robolectric:robolectric:3.0'
+
 
     // Required for instrumented tests
 
